[gd_scene load_steps=18 format=2]

[ext_resource path="res://asset/DNFBitBitTTF.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://asset/HBIOS-SYS-prop.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://asset/background1.jpg" type="Texture" id=3]
[ext_resource path="res://asset/button60.png" type="Texture" id=4]
[ext_resource path="res://asset/button40.png" type="Texture" id=5]
[ext_resource path="res://Records.gd" type="Script" id=6]
[ext_resource path="res://bgMusic.tscn" type="PackedScene" id=7]
[ext_resource path="res://bestRecord.gd" type="Script" id=8]
[ext_resource path="res://recordList.gd" type="Script" id=9]
[ext_resource path="res://recordList2.gd" type="Script" id=10]
[ext_resource path="res://asset/square_hover.png" type="Texture" id=11]
[ext_resource path="res://asset/square.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Records" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.90596, 1.86025 )
texture = ExtResource( 3 )

[node name="records" type="Label" parent="."]
margin_top = 94.0
margin_right = 1022.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 1 )
text = "Best Record in each Stage"
align = 1

[node name="bestRecord" type="Label" parent="."]
margin_left = 1.0
margin_top = 202.0
margin_right = 1025.0
margin_bottom = 293.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
script = ExtResource( 8 )

[node name="recordList" type="Label" parent="."]
margin_top = 319.0
margin_right = 1021.0
margin_bottom = 403.0
custom_fonts/font = SubResource( 5 )
text = "2
"
align = 1
script = ExtResource( 9 )

[node name="recordList2" type="Label" parent="."]
margin_top = 420.0
margin_right = 1021.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 5 )
text = "3

"
align = 1
script = ExtResource( 10 )

[node name="Quit" type="Node2D" parent="."]
position = Vector2( 810, 510 )

[node name="QuitButton" type="TextureButton" parent="Quit"]
margin_right = 192.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 4 )

[node name="quit" type="Label" parent="Quit"]
margin_left = 1.0
margin_top = 17.0
margin_right = 192.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "QUIT"
align = 1

[node name="bgMusic" parent="." instance=ExtResource( 7 )]

[node name="Stage1" type="Node2D" parent="."]
position = Vector2( 94, 256 )

[node name="TextureButton" type="TextureButton" parent="Stage1"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Stage1"]
margin_left = -1.0
margin_top = -34.0
margin_right = 39.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "1"
align = 1

[node name="bestRecord" type="Label" parent="Stage1"]
margin_left = 28.0
margin_top = 29.0
margin_right = 105.0
margin_bottom = 120.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
script = ExtResource( 8 )

[node name="Stage2" type="Node2D" parent="."]
position = Vector2( 271, 256 )

[node name="TextureButton" type="TextureButton" parent="Stage2"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Stage2"]
margin_left = -1.0
margin_top = -34.0
margin_right = 39.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "2"
align = 1

[node name="bestRecord" type="Label" parent="Stage2"]
margin_left = 29.0
margin_top = 28.0
margin_right = 101.0
margin_bottom = 119.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
script = ExtResource( 8 )

[node name="Stage3" type="Node2D" parent="."]
position = Vector2( 448, 256 )

[node name="TextureButton" type="TextureButton" parent="Stage3"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Stage3"]
margin_left = -1.0
margin_top = -34.0
margin_right = 39.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "3"
align = 1

[node name="bestRecord" type="Label" parent="Stage3"]
margin_left = 24.0
margin_top = 28.0
margin_right = 107.0
margin_bottom = 119.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
script = ExtResource( 8 )

[node name="Stage4" type="Node2D" parent="."]
position = Vector2( 625, 256 )

[node name="TextureButton" type="TextureButton" parent="Stage4"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Stage4"]
margin_left = -1.0
margin_top = -34.0
margin_right = 39.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "4"
align = 1

[node name="bestRecord" type="Label" parent="Stage4"]
margin_left = 23.0
margin_top = 28.0
margin_right = 112.0
margin_bottom = 119.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
script = ExtResource( 8 )

[node name="Stage5" type="Node2D" parent="."]
position = Vector2( 802, 256 )

[node name="TextureButton" type="TextureButton" parent="Stage5"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Stage5"]
margin_left = -1.0
margin_top = -34.0
margin_right = 39.0
margin_bottom = 36.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 6 )
text = "5"
align = 1

[node name="bestRecord" type="Label" parent="Stage5"]
margin_left = 24.0
margin_top = 27.0
margin_right = 113.0
margin_bottom = 118.0
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "1"
align = 1
script = ExtResource( 8 )

[connection signal="pressed" from="Quit/QuitButton" to="." method="_on_QuitButton_pressed"]
